force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/Plant_Name_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Centralized decoder for mapping various source system identifiers (Assembly M-Schedule, GPS M-Schedule, POMS, GMOS, APS) to the master Salesforce Plant Name.</description>
    <label>Plant Name Mapping</label>
    <pluralLabel>Plant Name Mappings</pluralLabel>
</CustomObject>