force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/APS__c.field-meta.xml
<CustomField>
    <fullName>APS__c</fullName>
    <label>APS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>