force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/Auth_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Plant_Code__c</fullName>
    <label>Auth Plant Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>