force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/GMOS_Stockman__c.field-meta.xml
<CustomField>
    <fullName>GMOS_Stockman__c</fullName>
    <description>Identifier for the GMOS (Stockman).</description>
    <label>GMOS Stockman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>