force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/GPS_M_Schedule__c.field-meta.xml
<CustomField>
    <fullName>GPS_M_Schedule__c</fullName>
    <description>Identifier used in the GPS M-Schedule Volume source.</description>
    <label>GPS M-Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>