force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/POMS__c.field-meta.xml
<CustomField>
    <fullName>POMS__c</fullName>
    <description>Mapping identifier for the POMS system.</description>
    <label>POMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>