force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/Salesforce_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Plant_Name__c</fullName>
    <description>The corresponding formal name within the Salesforce environment (e.g., Spring Hill Assembly).</description>
    <label>Salesforce Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>