force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/Workday__c.field-meta.xml
<CustomField>
    <fullName>Workday__c</fullName>
    <label>Workday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>