force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Name_Mapping__mdt/fields/Workday_Adaptive__c.field-meta.xml
<CustomField>
    <fullName>Workday_Adaptive__c</fullName>
    <label>Workday Adaptive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>